--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@angular/core": "^15.2.0",
     "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.2.0",
+    "@angular/material": "^15.2.7",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "firebase": "9.9.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
