--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic/cordova-builders": "^9.0.0",
     "bootstrap": "^5.2.3",
     "ionicons": "^7.0.0",
+    "jquery": "^3.6.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
