--- a/angular.json
+++ b/angular.json
@@ -171,7 +171,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "9b8c0f46-3619-4e84-8697-3ef7900169e1"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
