--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@angular/router": "^15.0.0",
     "@ionic/angular": "^7.0.0",
     "@ionic/cordova-builders": "^9.0.0",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0-alpha1",
     "ionicons": "^7.0.0",
     "jquery": "^3.6.4",
     "rxjs": "~7.8.0",
